add spacing between icon and title

--- a/templates/watch.twig
+++ b/templates/watch.twig
@@ -24,15 +24,15 @@
 		    <style>
 				.igui_seekbar_progress,
 				.igui_seekbar_scrubber {
-				  background-color: var(--bs-primary);
+					background-color: var(--bs-primary);
 				}
 				.ig-container {
 					font-family: var(--bs-font-sans-serif);
 				}
 				.ig_contextmenu {
-				background: rgba(0,0,0,0.85);
-				border-radius: 5px;
-				padding: 8px 0;
+					background: rgba(0,0,0,0.85);
+					border-radius: 5px;
+					padding: 8px 0;
 				}
 			</style>
 		<script>
@@ -41,7 +41,7 @@
 				sources: [
 					{
 						type: 'dash',
-						src: '{{ video.videofile }}',
+						src: '{{ video.videofile }}'
 					}
 				],
 				ui: {
