new assets and crap

--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -114,7 +114,7 @@
 		{% block precontent %}{% endblock %}
 		<div class="container">
 			{% block content %}{% endblock %}
-		<footer class="pt-3 my-2 text-muted border-top">
+		<footer class="text-center pt-3 my-2 text-muted border-top">
 		Created by the squareBracket team · © <b><span style="font-family:arial">GAMERAPPA</span></b> 2020-{{ 'now' | date('Y') }}
 		</footer>
 		</div>
