--- a/templates/register.twig
+++ b/templates/register.twig
@@ -2,11 +2,32 @@
 
 {% block title %}Register{% endblock %}
 
+{% block precontent %}
+<style>
+.form-signin {
+  width: 100%;
+  padding: 12px;
+  margin: auto;
+}
+.god-is-dead {
+max-width: 330px;
+}
+.gamerappa-killed-the-render-star {
+width: 50%;
+}
+</style>
+{% endblock %}
+
 	{% block content %}
 {% if error %}
 	<div class="alert alert-danger" role="alert">{{ error }}</div>
 {% endif %}
 
+<main class="text-center">
+  <form method="post" name="loginForm" id="loginForm" action="login.php">
+	<div class="text-center">
+    <img class="mb-2 gamerappa-killed-the-render-star" src="/assets/logo-wordmark.png" alt="squareBracket">
+	</div>
 <h2>Register</h2>
 <form method="POST">
 	<div class="form-group">{{ __("Username") }}:
@@ -19,6 +40,7 @@
 		<input type="password" name="pass1" class="form-control" placeholder="{{ __("Password") }}">
 		<input type="password" name="pass2" class="form-control" placeholder="{{ __("Password (Again)") }}">
 	</div>
-	<button type="submit" name="action" class="btn btn-primary">{{ __("Submit") }}</button>
+	<button class="w-100 btn btn-lg btn-primary" type="submit" name="action" class="btn btn-primary">{{ __("Register") }}</button>
 </form>
+</main>
 	{% endblock %}
