--- a/templates/settings.twig
+++ b/templates/settings.twig
@@ -3,6 +3,17 @@
 {% block title %}{{ __("User Settings") }}{% endblock %}
 
 	{% block content %}
+	<div class="h-100 p-4 bg-light border rounded-3">
+		  <div class="row">
+		  <div class="col-1">
+          <img class="img-fluid" src="/assets/settings.png" alt="Settings">
+		  </div>
+		  <div class="col-11">
+          <h2>Profile settings</h2>
+          Adjust your settings.
+		  </div>
+        </div></div>
+		<br>
 <form action="settings.php" method="post">
 	<textarea class="form-control" id="description" name="description" maxlength="500" style="overflow:hidden;resize:none" rows="3" placeholder="{{ __("Description") }}">{{ current_user.description }}</textarea>
 	<select class="form-select" name="language">
