add crappy favicons

--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -18,6 +18,16 @@
 		<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 		<script src="vendor/twbs/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script src="assets/common.js"></script>
+		<link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
+		<link rel="manifest" href="/assets/site.webmanifest">
+		<link rel="mask-icon" href="/assets/safari-pinned-tab.svg" color="#0a63b3">
+		<meta name="apple-mobile-web-app-title" content="squareBracket">
+		<meta name="application-name" content="squareBracket">
+		<meta name="msapplication-TileColor" content="#0a63b3">
+		<meta name="msapplication-TileImage" content="/assets/mstile-144x144.png">
+		<meta name="theme-color" content="#0a63b3">
 		<title>{% block title %}{% endblock %} - squareBracket</title>
 	</head>
 	<body>
