new profiles (incomplete) + new strings

--- a/bootstrap/_variables.scss
+++ b/bootstrap/_variables.scss
@@ -1,12 +1,13 @@
 $white: #fff;
-$gray-100: #f8f9fa;
-$gray-200: #e9ecef;
-$gray-300: #dee2e6;
-$gray-400: #ced4da;
-$gray-500: #adb5bd;
-$gray-700: #495057;
-$gray-800: #343a40;
-$gray-900: #212529;
+$gray-100: #e3e3e3;
+$gray-200: #cfcfcf;
+$gray-300: #c2c2c2;
+$gray-400: #b8b8b8;
+$gray-500: #969696;
+$gray-600: #808080;
+$gray-700: #666666;
+$gray-800: #4f4f4f;
+$gray-900: #303030;
 $black: #000;
 $indigo: #371cd4;
 $purple: #523bb8;
