--- a/templates/user.twig
+++ b/templates/user.twig
@@ -6,43 +6,48 @@
 <style>
 	{{ profCss | raw }}
 </style>
-<div class="p-5 mb-4 bg-custom-profile" style="margin-top:-20px;">
-	<div style="padding:50px;"></div>
-</div>
 	{% endblock %}
 
 	{% block content %}
-<div class="row" style="margin-top:-180px;">
+<div class="row">
 	{% if edited %}
 	<div class="alert alert-success alert-dismissible fade show" role="alert">
 		{{ __("Your profile settings was successfully updated.") }}
 		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 	</div>
 	{% endif %}
-	<div class="p-1 mb-4 col-md-6 col-lg-4 bg-dark rounded-3 text-white" style="height: 1%;"> <!-- This prevents the user info box from being extremely tall. Box probably needs to be redesigned... -->
-		<div class="container-fluid py-5">
+	<div class="p-1 mb-4 bg-custom-profile rounded-3 text-white"> <!-- This prevents the user info box from being extremely tall. Box probably needs to be redesigned... -->
+		<div class="container-fluid py-4">
 			<div class="row">
-				<div class="col text-center">
-					<img src="{{ profile_image(user.username) }}" width="128" alt="pfp"><h1 class="align-top fw-bold">{{ user.username }}</h1>
+			<div class="col-8">
+					<img class="float-start" src="{{ profile_image(user.username) }}" style="margin-right: 5%;" width="128" alt="pfp"><h1 class="align-top fw-bold">{{ user.username }}</h1>
 					<p class="fs-4">{{ user.description }}</p>
+			</div>
+			<div class="col-4 text-end">
 					<button class="btn btn-warning btn-lg" type="button">{{ __("Subscribe") }}</button>
-				</div>
+			</div>
 			</div>
 		</div>
-	</div>
-	<div class="col-md-6 col-lg-8">
-		<div class="card">
-			<div class="card-body">
+	</div></div>
+	<div class="row">
+	<div class="col-8">
 				<div class="caption">
-					<h3>{{ __("Latest Uploads") }}</h3>
+					<h3>{{ __("Uploaded videos") }}</h3>
 					{% for latestVideo in latestVideos %}
 						{{ video_box(latestVideo) }}
 					{% else %}
 						<p>{{ __("There are no videos uploaded by %s.", [user.username]) }}</p>
 					{% endfor %}
-				</div>
-			</div>
 		</div>
+	</div>
+	<div class="col-4">
+	<h4>{{ __("About %s", [user.username]) }}</h4>
+		<dl class="row">
+		  <dt class="col-sm-4">{{ __("Lastest Activity") }}</dt>
+		  <dd class="col-sm-8">Mayvember 32st 50 EC</dd>
+		  <dt class="col-sm-4">{{ __("Date Joined") }}</dt>
+		  <dd class="col-sm-8">Octember 64nd 49 EC</dd>
+		</dl>
 	</div>
 </div>
 	{% endblock %}
