--- a/templates/settings.twig
+++ b/templates/settings.twig
@@ -6,11 +6,11 @@
 	<div class="h-100 p-4 bg-light border rounded-3">
 		  <div class="row">
 		  <div class="col-1">
-          <img class="img-fluid" src="/assets/settings.png" alt="Settings">
+          <img class="img-fluid" src="/assets/settings.png" alt="{{ __("Settings") }}">
 		  </div>
 		  <div class="col-11">
-          <h2>Profile settings</h2>
-          Adjust your settings.
+          <h2>{{ __("Profile settings") }}</h2>
+          {{ __("Adjust your settings.") }}
 		  </div>
         </div></div>
 		<br>
