--- a/templates/index.twig
+++ b/templates/index.twig
@@ -33,7 +33,7 @@
 		<hr/>
 		<h3>{{ __("What's new?") }}</h3>
 		<p>{{ __("Hello squareBracket users, We are working on a redesigned version for Alpha 3. At the end of Alpha 3, we should have already finalized the UI for at least Beta 1.") }}</p>
-		<p class="blockquote-footer">Chaziz/Gamerappa</p>
+		<p class="blockquote-footer">{{ __("Chaziz/Gamerappa") }}</p>
 		<hr/>
 		<h3>{{ __("Featured videos") }}</h3>
 		{% for video in featuredVideos %}
