--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -139,7 +139,7 @@
 		<div class="container">
 			{% block content %}{% endblock %}
 		<footer class="text-center pt-3 my-2 text-muted border-top">
-		{{ __("Created by the squareBracket team") }} · <b><span style='font-family:arial'>GAMERAPPA</span></b> 2020-{{ 'now' | date('Y') }}
+		{{ __("Created by the squareBracket team") }} · {{ __("<b><span style='font-family:arial'>GAMERAPPA</span></b>") }} 2020-{{ 'now' | date('Y') }}
 		</footer>
 		</div>
 	</body>
