--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -8,7 +8,7 @@
 		{% if theme != 'vanilla' %}
 		<link rel="stylesheet" id="bootstrap" href="assets/bs{% if theme == 'dark' %}-dark{% endif %}.css" type="text/css">
 		{% else %}
-		<link id="bootstrap" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 		{% endif %}
 		<!-- jquery and bootstrap 5 javascript
 		(IMPORTANT: even though bootstrap 5 claims to no longer support jquery
