--- a/templates/user.twig
+++ b/templates/user.twig
@@ -5,32 +5,46 @@
 	{% block precontent %}
 <style>
 	{{ profCss | raw }}
+	.bg-channel-background {
+	background-image: url({{ channel_background(user.username) }});
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+    margin-top: -20px;
+	padding-bottom: 25px;
+    padding-top: 20px;
+	}
 </style>
+<div class="bg-channel-background">
 	{% endblock %}
 
 	{% block content %}
 <div class="row">
 	{% if edited %}
 	<div class="alert alert-success alert-dismissible fade show" role="alert">
-		{{ __("Your profile settings was successfully updated.") }}
+		{{ __("Your profile settings were successfully updated.") }}
 		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 	</div>
 	{% endif %}
 	<div class="p-1 mb-4 bg-custom-profile rounded-3 text-white"> <!-- This prevents the user info box from being extremely tall. Box probably needs to be redesigned... -->
 		<div class="container-fluid py-4">
 			<div class="row">
-			<div class="col-8">
-					<img class="float-start" src="{{ profile_image(user.username) }}" style="margin-right: 5%;" width="128" alt="pfp"><h1 class="align-top fw-bold">{{ user.username }}</h1>
+			<div class="col-11">
+					<img class="float-start" src="{{ profile_image(user.username) }}" style="margin-right: 1.5%;" width="128" alt="pfp"><h1 class="align-top fw-bold">
+					{{ user.username }}{% if user.u_flags == 1 %}<svg data-bs-toggle="tooltip" data-bs-placement="top" title="squareBracket Partner" style="margin-left: 0.75%;" class="bi" width="32" height="32" fill="currentColor">
+							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#patch-check-fill"/>
+						</svg>{% endif %}</h1>
 					<p class="fs-4">{{ user.description }}</p>
 			</div>
-			<div class="col-4 text-end">
-					<button class="btn btn-warning btn-lg" type="button">{{ __("Subscribe") }}</button>
+			<div class="col-1 text-end">
+					<button class="btn btn-warning" type="button">{{ __("Subscribe") }}</button>
 			</div>
 			</div>
 		</div>
 	</div></div>
 	<div class="row">
 	<div class="col-8">
+	<div class="card">
+  <div class="card-body">
 				<div class="caption">
 					<h3>{{ __("Uploaded videos") }}</h3>
 					{% for latestVideo in latestVideos %}
@@ -40,7 +54,11 @@
 					{% endfor %}
 		</div>
 	</div>
+	  </div>
+</div>
 	<div class="col-4">
+	<div class="card">
+  <div class="card-body">
 	<h4>{{ __("About %s", [user.username]) }}</h4>
 		<dl class="row">
 		  <dt class="col-sm-4">{{ __("Last Seen") }}</dt>
@@ -48,6 +66,9 @@
 		  <dt class="col-sm-4">{{ __("Date Joined") }}</dt>
 		  <dd class="col-sm-8">{{ user.joined | date('M j, Y') }}</dd>
 		</dl>
-	</div>
+		  </div>
 </div>
+	</div>
+</div></div></div>
+<div class="container">
 	{% endblock %}
