add shitty admin panel recycled from poktube admin.php

--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -69,7 +69,7 @@
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 								<svg class="bi" width="16" height="16" fill="currentColor">
-							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#gear-wide-connected"/>
+							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#tools"/>
 						</svg> {{ __("Settings") }}
 							</a>
 							<ul class="dropdown-menu" id="mainMenu" aria-labelledby="navbarDropdown">
@@ -95,7 +95,7 @@
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 								<svg class="bi" width="16" height="16" fill="currentColor">
-							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#gear-wide-connected"/>
+							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#tools"/>
 						</svg> {{ __("Settings") }}
 							</a>
 							<ul class="dropdown-menu" id="mainMenu" aria-labelledby="navbarDropdown">
