--- a/templates/settings.twig
+++ b/templates/settings.twig
@@ -7,13 +7,11 @@
 	<div class="col-2">
 	<ul class="list-group">
   <li class="list-group-item"><img src="{{ profile_image(current_user.username) }}" alt="{{ current_user.username }}" class="rounded" width="40" height="40"> {{ current_user.username }}</li>
-  <li class="list-group-item">A second item</li>
-  <li class="list-group-item">A third item</li>
-  <li class="list-group-item">A fourth item</li>
-  <li class="list-group-item">And a fifth one</li>
+  <li class="list-group-item">Profile settings</li>
+  <li class="list-group-item">Partnership</li>
 </ul>
 	</div>
-	<div class="col-8">
+	<div class="col-10">
 	<div class="p-4 bg-light border rounded-3">
 		  <div class="row">
 		  <div class="col-1">
@@ -21,7 +19,7 @@
 		  </div>
 		  <div class="col-11">
           <h2>{{ __("Profile settings") }}</h2>
-          {{ __("Adjust your settings.") }}
+          {{ __("Change the appearance of your profile.") }}
 		  </div>
         </div></div>
 		<br>
